fixes some spacing issues involving tables and buttons

--- a/cdap-ui/app/directives/flow-graph/flow.less
+++ b/cdap-ui/app/directives/flow-graph/flow.less
@@ -13,13 +13,13 @@ my-flow-graph {
 
   .node rect {
     stroke: #999;
-    fill: #fff;
+    fill: white;
     stroke-width: 1.5px;
   }
 
   .edgePath path {
     stroke-dasharray: 8px, 8px;
-    stroke: #5A5D6E;
+    stroke: @cdap-darkness;
     stroke-width: 2px;
   }
 
@@ -51,7 +51,7 @@ my-flow-graph {
   }
 
   .stream-events {
-    fill: #0AAE33;
+    fill: @brand-success;
     stroke: @cdap-darkness;
     stroke-width: 5px;
     cursor: pointer;
@@ -65,7 +65,7 @@ my-flow-graph {
 
   .flowlet-instances {
     fill: #01ABED;
-    stroke: #3C4355;
+    stroke: @cdap-darkness;
     stroke-width: 2px;
   }
 
@@ -73,8 +73,6 @@ my-flow-graph {
     fill: white;
     cursor: default;
     text-anchor: middle;
-    // stroke: @cdap-header;
-    // stroke-width: 2px;
   }
 }
 
@@ -91,13 +89,13 @@ my-workflow-graph {
 
   .node rect {
     stroke: #999;
-    fill: #fff;
+    fill: white;
     stroke-width: 1.5px;
   }
 
   .edgePath path {
     stroke-dasharray: 8px, 8px;
-    stroke: #5A5D6E;
+    stroke: @cdap-darkness;
     stroke-width: 2px;
   }
 
@@ -109,30 +107,34 @@ my-workflow-graph {
   }
 
   .end-svg, .start-svg {
-    fill: white;
     stroke: @cdap-darkness;
     stroke-width: 5px;
+    + .label text {
+      fill: white;
+      font-size: 12px;
+    }
   }
+  .start-svg { fill: @brand-success; }
+  .end-svg { fill: @brand-danger; }
 
   .conditional-svg {
-    fill: #3C4355;
+    fill: @cdap-darkness;
     cursor: pointer;
   }
 
   .job-events {
-    fill: #FF6600;
+    fill: @cdap-orange;
     stroke: #ebecf1;
     stroke-width: 2px;
     cursor: pointer;
   }
 
   .conditional-events {
-    fill: #0AAE33;
+    fill: @brand-success;
     stroke: white;
     stroke-width: 2px;
     cursor: pointer;
   }
-
 }
 
 .d3-tip {
@@ -140,7 +142,7 @@ my-workflow-graph {
   font-weight: bold;
   padding: 12px;
   background: rgba(0, 0, 0, 0.8);
-  color: #fff;
+  color: white;
   border-radius: 2px;
   pointer-events: none;
 }
@@ -166,6 +168,4 @@ my-workflow-graph {
   text-align: center;
 }
 
-span.tip-node-name {
-  color: red;
-}
+span.tip-node-name { color: @brand-danger; }
