--- a/cdap-ui/app/features/mapreduce/mapreduce.less
+++ b/cdap-ui/app/features/mapreduce/mapreduce.less
@@ -1,22 +1,17 @@
 @import "../../styles/variables.less";
 
 body.state-mapreduce{
-    .run-status {
-      margin-bottom: 25px;
-    }
-    .table-status { margin-top: 0; }
-    .entry {
-      font-weight: 700;
-    }
+    .run-status { margin-bottom: 25px; }
+    .table.table-status { margin-top: 0; }
+    .col-sm-6 > div.btn-md { margin-top: 14px; }
+    .entry { font-weight: 700; }
 
   .panel-group {
     .panel.panel-default {
       > .panel-heading {
         > a {
-          &:hover {
-            text-decoration: none;
-          }
           color: white;
+          &:hover { text-decoration: none; }
         }
       }
     }
@@ -30,18 +25,6 @@ body.state-mapreduce{
 
   .component-box {
     margin-top: 20px;
-
-    .task-item:nth-child(-n+7) {
-      border-right: 1px solid black;
-    }
-  }
-
-  &.theme-cdap {
-    .table.table-status { margin-top: 0; }
-    .btn.btn-default.no-border{
-      &:focus{
-        outline: none;
-      }
-    }
+    .task-item:nth-child(-n+7) { border-right: 1px solid black; }
   }
 }
